Header and thumbnail

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -26,41 +28,46 @@
     </div>
     <div class="thumbnail">
       <div class="container">
-        <div class="thubmnail__inner">
-          <div class="thubmnail__inner__upper">
-            <div class="thumbnail__photo">
-              <img
-                class="thumbnail__img"
-                src="images/profile.png"
-                alt="profile photo"
-              />
+        <div class="thubmnail__inner__upper">
+          <div class="thumbnail__photo">
+            <div class="thumbnail__photo__bg">
+              <img class="thumbnail__img" src="images/profile.png" alt="" />
             </div>
-            <div class="thumbnail__info__contact">
-              <div class="thumbnail__info">
-                Hello, I`m a <br />
-                <b>UX/UI Designer</b>
-                <div class="thumbnail__name">Illia Frunza</div>
+          </div>
+          <div class="thumbnail__info__contact">
+            <div class="thumbnail__info">
+              Hello, I`m a <br />
+              <b>UX/UI Designer</b>
+              <div class="thumbnail__name">Illia Frunza</div>
+            </div>
+            <div class="thumbnail__contact">
+              <div class="thumbnail__contact__upper">
+                <a class="btn btn--blue btn--50" href="#"
+                  >Hire me <img class="icon" src="images/arrow.png" alt=""
+                /></a>
+                <a class="btn btn--gray btn--50" href="#"
+                  >Portfolio <img class="icon" src="images/arrow.png" alt=""
+                /></a>
               </div>
-              <div class="thumbnail__contact">
-                <div class="thumbnail__contact__upper">
-                  <a class="btn btn--blue btn--50" href="#"
-                    >Hire me <img class="icon" src="images/arrow.png" alt=""
-                  /></a>
-                  <a class="btn btn--gray btn--50" href="#"
-                    >Portfolio <img class="icon" src="images/arrow.png" alt=""
-                  /></a>
-                </div>
-                <div class="thumbnail__contact__lower">
-                  <a class="btn btn--gray" href="#">
-                    <div style="display: flex; gap: 15px">
-                      <img class="icon" src="images/tg_icon.png" alt="" />
-                      Get in touch by Telegram
-                    </div>
-                    <img class="icon" src="images/arrow.png" alt="" />
-                  </a>
-                </div>
+              <div class="thumbnail__contact__lower">
+                <a class="btn btn--gray" href="#">
+                  <div style="display: flex; gap: 15px">
+                    <img class="icon" src="images/tg_icon.png" alt="" />
+                    Get in touch by Telegram
+                  </div>
+                  <img class="icon" src="images/arrow.png" alt="" />
+                </a>
               </div>
             </div>
+          </div>
+        </div>
+        <div class="thubmnail__inner__lower">
+          <div class="thumvnail__quote">Massimo Vignelli:</div>
+          <div>
+            “The life of a designer is a constant struggle. Fight against
+            ugliness. Just like a doctor fights a disease. For us, visual
+            disease is what we have around us, and what we are trying to do is,
+            one way or another, cure the environment through design.”
           </div>
         </div>
       </div>
