--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,600;0,700;1,500&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -69,6 +67,40 @@
             disease is what we have around us, and what we are trying to do is,
             one way or another, cure the environment through design.”
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="portfolio">
+      <div class="container">
+        <h1>Portfolio</h1>
+        <div class="card__container card--portf">
+          <div class="portfolio__card">
+            <img class="card__img" src="images/design.png" alt="" />
+            <div class="portfolio__card__text">App Design</div>
+          </div>
+          <div class="portfolio__card">
+            <img class="card__img" src="images/service.png" alt="" />
+            <div class="portfolio__card__text">Browse Service</div>
+          </div>
+          <div class="portfolio__card">
+            <img class="card__img" src="images/web_design.png" alt="" />
+            <div class="portfolio__card__text">Web Design</div>
+          </div>
+        </div>
+        <div class="card__container">
+          <div class="btn--23 more">See more</div>
+          <a href="#" class="btn btn--gray btn--23">
+            Dribble
+            <img class="icon" src="images/arrow.png" alt="" />
+          </a>
+          <a href="#" class="btn btn--gray btn--23">
+            Behance
+            <img class="icon" src="images/arrow.png" alt="" />
+          </a>
+          <a href="#" class="btn btn--gray btn--23">
+            Figma files
+            <img class="icon" src="images/arrow.png" alt="" />
+          </a>
         </div>
       </div>
     </div>
