--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             Dribble
             <img class="icon" src="images/arrow.png" alt="" />
           </a>
-          <a href="#" class="btn btn--gray btn--23">
+          <a href="#" class="btn btn--blue btn--23">
             Behance
             <img class="icon" src="images/arrow.png" alt="" />
           </a>
@@ -101,6 +101,45 @@
             Figma files
             <img class="icon" src="images/arrow.png" alt="" />
           </a>
+        </div>
+      </div>
+    </div>
+    <div class="reference">
+      <div class="container">
+        <h1>Reference</h1>
+        <div class="card__container">
+          <div class="reference__card">
+            <h1 class="reference__card__title">CEO of IT2School</h1>
+            <p class="name__card__title">Valentina Gorodetki</p>
+            <div class="reference__contact__row">
+              <a href="#" class="btn btn--shadow">
+                LinkedIn
+                <img class="icon" src="images/arrow.png" alt="" />
+              </a>
+              <a href="#" class="btn btn--blue btn--phone">
+                <img src="images/phone.png" alt="" />
+              </a>
+            </div>
+          </div>
+          <div class="reference__card">
+            <h1 class="reference__card__title">
+              CEO and Founder of Atom Space
+            </h1>
+            <p class="name__card__title">Ann Derevyanko</p>
+            <div class="reference__contact__row">
+              <a href="#" class="btn btn--shadow">
+                Telegram
+                <img class="icon" src="images/arrow.png" alt="" />
+              </a>
+              <a href="#" class="btn btn--blue btn--phone">
+                <img src="images/phone.png" alt="" />
+              </a>
+            </div>
+          </div>
+          <div class="reference__card">
+            <img src="images/plus.png" alt="" />
+            You can be next
+          </div>
         </div>
       </div>
     </div>
