--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
       <div class="container">
         <div class="thubmnail__inner__upper">
           <div class="thumbnail__photo">
-            <div class="thumbnail__photo__bg">
-              <img class="thumbnail__img" src="images/profile.png" alt="" />
-            </div>
+            <img class="thumbnail__img" src="images/profile_ready.png" alt="" />
           </div>
           <div class="thumbnail__info__contact">
             <div class="thumbnail__info">
@@ -48,7 +46,7 @@
                 /></a>
               </div>
               <div class="thumbnail__contact__lower">
-                <a class="btn btn--gray" href="#">
+                <a class="btn btn--gray btn--lower" href="#">
                   <div style="display: flex; gap: 15px">
                     <img class="icon" src="images/tg_icon.png" alt="" />
                     Get in touch by Telegram
@@ -87,13 +85,13 @@
             <div class="portfolio__card__text">Web Design</div>
           </div>
         </div>
-        <div class="card__container">
+        <div class="card__container btn--porfolio">
           <div class="btn--23 more">See more</div>
           <a href="#" class="btn btn--gray btn--23">
             Dribble
             <img class="icon" src="images/arrow.png" alt="" />
           </a>
-          <a href="#" class="btn btn--blue btn--23">
+          <a href="#" class="btn btn--gray btn--23">
             Behance
             <img class="icon" src="images/arrow.png" alt="" />
           </a>
@@ -139,6 +137,34 @@
           <div class="reference__card">
             <img src="images/plus.png" alt="" />
             You can be next
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <div class="footer__inner">
+          <div class="footer__text">
+            <span
+              >Based in Maidstone, <br />
+              United Kingdom</span
+            >
+            <span>+44 7360 784977</span>
+            <span>illia_frunza@ukr.net</span>
+          </div>
+          <div class="text__container">
+            <div class="footer__text">
+              <span>Portfolio</span>
+              <a href="#">Dribbble</a>
+              <a href="#">Behance</a>
+              <a href="#">Figma Files</a>
+            </div>
+            <div class="footer__text">
+              <span>Social media</span>
+              <a href="#">LinkedIn</a>
+              <a href="#">Facebook</a>
+              <a href="#">Instagram</a>
+            </div>
           </div>
         </div>
       </div>
