--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="thumbnail__contact">
               <div class="thumbnail__contact__upper">
-                <a class="btn btn--blue btn--50" href="#"
+                <a class="btn btn--blue btn--50" href="bot_test/index.html"
                   >Hire me <img class="icon" src="images/arrow.png" alt=""
                 /></a>
                 <a class="btn btn--gray btn--50" href="#"
